--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  --color-screen-background: var(--screen-background);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-card: var(--card);
@@ -45,6 +46,7 @@
 :root {
   --radius: 0.625rem;
   --background: oklch(1 0 0);
+  --screen-background: oklch(0.9616 0.0057 84.57);
   --foreground: oklch(0.129 0.042 264.695);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.129 0.042 264.695);
