--- a/src/index.css
+++ b/src/index.css
@@ -81,6 +81,7 @@
 
 .dark {
   --background: oklch(0.129 0.042 264.695);
+  /* --screen-background: oklch(0.279 0.041 260.031); */
   --foreground: oklch(0.984 0.003 247.858);
   --card: oklch(0.208 0.042 265.755);
   --card-foreground: oklch(0.984 0.003 247.858);
